# Complaints_Prediction_NLP

./: README.md  pyproject.toml
Research/: EDA.ipynb  Feature_Eng.ipynb
Research/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Research/catboost_info/learn/: events.out.tfevents
src/: constant.py  exception.py
src/component/: data_ingestion.py
src/config/: spark_manager.py
src/entity/: config_entity.py  metadata_entity.py
src/pipeline/: training.py
