[tool.poetry]
name = "complaint-prediction"
version = "0.1.0"
description = "Using NLP & ML prediction where a dispute was raised on the bases of the complaint and other features."
authors = ["Sheiphan <sheiphanshaijan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
pandas = "^1.4"
requests = "^2.31.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
catboost = "^1.2"
category-encoders = "^2.6.1"
imblearn = "^0.0"
hyperopt = "^0.2.7"
setuptools = "^67.8.0"
pymongo = "^4.3.3"
pyspark = "^3.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[tool.poetry.scripts]
showtime = "dataset.script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


